fixed links being wrong color (blue) before being visited

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,15 @@ a:hover {
     color: rgba(0,0,0,0.87);
 }
 
+.list-item a:link {
+    color: rgba(0,0,0,0.87);
+}
+
 .list-item2 a:visited {
+    color: #5f6368;
+}
+
+.list-item2 a:link {
     color: #5f6368;
 }
 
